--- a/index.html
+++ b/index.html
@@ -38,8 +38,22 @@
   <body class="bg-gray-900">
     <div id="root"></div>
 
-    <!-- Correct Vite bundled JS file -->
+    <!-- Vite dev entry (build will replace this with the hashed bundle in docs/index.html) -->
     <script type="module" src="/index.tsx"></script>
-
   </body>
 </html>
+``` :contentReference[oaicite:0]{index=0}
+
+### What this means
+
+- **This file is fine.** We don’t touch the CSS name here.
+- Vite uses this as the **template** and, on `npm run build`, generates:
+  - `docs/index.html`
+  - `docs/assets/index-XXXXX.css`
+  - `docs/assets/index-XXXXX.js`
+
+In `docs/index.html`, Vite will automatically inject the correct:
+
+```html
+<link rel="stylesheet" href="./assets/index-XXXXX.css">
+<script type="module" src="./assets/index-XXXXX.js"></script>
