--- a/index.html
+++ b/index.html
@@ -44,6 +44,6 @@
 
     <!-- IMPORTANT: DEVELOPMENT ENTRY ONLY -->
     <!-- Vite will replace this with hashed JS in docs/index.html -->
-    <script type="module" src="./index.tsx"></script>
+    <script type="module" src="/index.tsx"></script>
   </body>
 </html>
