Whatever you changed

--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     <title>INVERT FM - Music Player</title>
 
     <!-- DEVELOPMENT CSS (Vite will replace this automatically in /docs/) -->
-    <link rel="stylesheet" href="./index.css" />
+    <link rel="stylesheet" href="/invert11/index.css" />
+
 
     <!-- Icons + Manifest -->
     <link rel="icon" type="image/png" href="./icons/icon-512.png" />
