--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     <!-- Icons + Manifest -->
     <link rel="icon" type="image/png" href="./icons/icon-512.png" />
     <link rel="apple-touch-icon" href="./icons/icon-512.png" />
-    <link rel="manifest" href="./manifest.webmanifest" />
+    <link rel="manifest" href="/invert11/manifest.webmanifest" />
+
 
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
